--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -42,7 +42,7 @@
 
   img {
     max-height: 33px;
-    margin-top: 2px;
+    margin-top: 4px;
   }
 }
 
@@ -154,6 +154,10 @@
 }
 
 @media only screen and (max-width: 860px) {
+  .site-header {
+    padding: 0.5rem;
+  }
+
   .post-template .site-header {
     position: static;
     width: auto;
