--- a/assets/sass/_post-navigation.scss
+++ b/assets/sass/_post-navigation.scss
@@ -79,6 +79,8 @@
   margin-bottom: 15px;
   position: relative;
   text-transform: uppercase;
+  font-weight: 800;
+  text-shadow: 0px 0px 30px #999;
 }
 
 .nav-title {
