--- a/assets/sass/_posts-pages.scss
+++ b/assets/sass/_posts-pages.scss
@@ -84,6 +84,8 @@
   .post-author {
     a {
       color: $gray-darkest;
+      text-shadow: 0px 0px 30px #999;
+      font-weight: 800;
 
       &:hover {
         color: #000;
@@ -140,7 +142,7 @@
     padding-left: 20px;
     padding-right: 20px;
     text-align: center;;
-    width: 150px;
+    width: 200px;
     text-decoration: none;
     text-transform: uppercase;
 
@@ -520,7 +522,7 @@
   .slick-arrow {
     background-color: $color-accent;
     border-color: $color-accent;
-    color: $gray-darkest;
+    color: #fff;
     cursor: pointer;
     height: 40px;
     padding: 0;
